# Textual_YT_Browser

./: .env.example  .gitignore  README.md  justfile  main.py  pyproject.toml
.github/workflows/: update_db.yml
src/: app.tcss  config.py  database.py  google_ai.py  main.py  models.py  run_get_last_videos.py  run_playlistid.py  run_refactor_yaml.py  run_update_yt_db.py  utils.py  youtube.py  yt_config.yaml  yt_config.yaml.bak
src/widgets/: data_table.py  list_view.py  summary_modalscreen.py
