[project]
name = "textual-yt-browser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-api-python-client>=2.170.0",
    "pymongo[srv]==3.12",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
    "textual>=3.2.0",
]

[dependency-groups]
dev = [
    "textual-dev>=1.7.0",
]